--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ install:
   - pip3 install -r requirements.txt
 
 script:
-  - python manage.py migrate -v 3
-  - python manage.py test -v 3
+  - python3 manage.py migrate -v 3
+  - python3 manage.py test -v 3
