--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ install:
 
 script:
   - python3 manage.py migrate -v 3
+  - python3 manage.py loaddata mail_template_entity
   - python3 manage.py test -v 3
