--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ env:
     - BUILD_ON_TRAVIS=true
 
 install:
-  - pip3 install -r requirements.txt
+  - pip3 install pipenv
+  - pipenv install
 
 script:
   - python3 manage.py migrate -v 3
